--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab6P2_JesusR
-main.class=lab6p2_jesusr.Lab6P2_JesusR
+main.class=lab6p2_jesusr.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
